render react app into the browser
Those two lines bootstrap the React app, attaching it to the root div and rendering the App component inside it.

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <script>
         function App(){
             return React.createElement("header");
-        }        
-    </script>
+        }
 
-    
-    
+        const root = ReactDOM.createRoot(document.getElementById("root"));
+        root.render(React.createElement(App));
+    </script>
 </body>
 </html>
 
